@@ -1,8 +1,10 @@
 @echo off
 
+set _CP=CLASSPATH
+
 if exist build\classes\org\apache\tools\ant\Main.class goto doBuild
 
-bootstrap.bat %1 %2 %3 %4 %5 %6 %7 %8
+call bootstrap.bat %1 %2 %3 %4 %5 %6 %7 %8
 
 :doBuild
 
@@ -33,11 +35,11 @@ echo.
 
 :runAnt
 set NEW_ANT_HOME=%ANT_HOME%
-if "x%ANT_HOME%" == "x" set NEW_ANT_HOME=dist
+if "%ANT_HOME%" == "" set NEW_ANT_HOME=dist
 set CLASSPATH=%LOCALCLASSPATH%
 set LOCALCLASSPATH=
 %_JAVACMD% -classpath %CLASSPATH% %ANT_OPTS% org.apache.tools.ant.Main "-Dant.home=%NEW_ANT_HOME%" -logger org.apache.tools.ant.NoBannerLogger -emacs %1 %2 %3 %4 %5 %6 %7 %8
 
-set CLASSPATH=
+set CLASSPATH=%_CP%
 set NEW_ANT_HOME=
 set _JAVACMD=
